--- a/values.yaml
+++ b/values.yaml
@@ -174,6 +174,10 @@ podSecurityContext:
   runAsUser: 104
   runAsGroup: 107
 
+containerSecurityContext
+  enabled: false
+  allowPrivilegeEscalation: false
+
 ingress:
   enabled: true
   annotations:
@@ -209,4 +213,4 @@ onlyofficeProjectServer:
   enabled: true
   replicaCount: 2
 
-imagePullSecrets: myregistrykey
+imagePullSecrets: ""
