--- a/templates/pvc/crm-data.yaml
+++ b/templates/pvc/crm-data.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.onlyofficeCrm.enabled }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -9,3 +10,4 @@ spec:
   resources:
     requests:
       storage: {{ .Values.persistence.crmData.size }}
+{{- end }}
