--- a/templates/pvc/crm-data.yaml
+++ b/templates/pvc/crm-data.yaml
@@ -1,11 +1,13 @@
+{{- if .Values.onlyofficeCrm.enabled }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: crm-data
 spec:
-  storageClassName: {{ .Values.persistence.crmData.storageClass }}
+  storageClassName: {{ .Values.persistence.storageClass }}
   accessModes:
   - ReadWriteMany
   resources:
     requests:
       storage: {{ .Values.persistence.crmData.size }}
+{{- end }}
