--- a/templates/pvc/project-data.yaml
+++ b/templates/pvc/project-data.yaml
@@ -1,11 +1,13 @@
+{{- if .Values.onlyofficeProjectServer.enabled }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: project-data
 spec:
-  storageClassName: {{ .Values.persistence.projectData.storageClass }}
+  storageClassName: {{ .Values.persistence.storageClass }}
   accessModes:
   - ReadWriteMany
   resources:
     requests:
       storage: {{ .Values.persistence.projectData.size }}
+{{- end }}
