--- a/templates/statefulset/onlyoffice-urlshortener.yaml
+++ b/templates/statefulset/onlyoffice-urlshortener.yaml
@@ -47,12 +47,12 @@ spec:
           valueFrom:
             secretKeyRef:
               name: {{ template "appserver.mysql.secretName" . }}
-              key: {{ .Values.connections.musqlSecretKeyRootPassword }}
+              key: {{ .Values.connections.mysqlSecretKeyRootPassword }}
         - name: MYSQL_PASSWORD
           valueFrom:
             secretKeyRef:
               name: {{ template "appserver.mysql.secretName" . }}
-              key: {{ .Values.connections.musqlSecretKeyPassword }}
+              key: {{ .Values.connections.mysqlSecretKeyPassword }}
         - name: DOCUMENT_SERVER_JWT_ENABLED
           valueFrom:
             secretKeyRef:
@@ -78,42 +78,55 @@ spec:
           name: http
         - containerPort: {{ .Values.containerPorts.urlshortener }}
           name: urls
-        {{ if .Values.readinessProbeEnabled }}
+        {{- if .Values.readinessProbe.enabled }}
         readinessProbe: {{- omit .Values.readinessProbe "enabled" | toYaml | nindent 10 }}
-        {{ end }}
-        {{ if .Values.livenessProbeEnabled }}
+        {{- end }}
+        {{- if .Values.livenessProbe.enabled }}
         livenessProbe: {{- omit .Values.livenessProbe "enabled" | toYaml | nindent 10 }}
-        {{ end }}
-        {{ if .Values.startupProbeEnabled }}
+        {{- end }}
+        {{- if .Values.startupProbe.enabled }}
         startupProbe: {{- omit .Values.startupProbe "enabled" | toYaml | nindent 10 }}
-        {{ end }}
-        {{- if .Values.podSecurityContext.enabled }}
-        securityContext: {{- omit .Values.podSecurityContext "enabled" | toYaml | nindent 10 }}
+        {{- end }}
+        {{- if .Values.containerSecurityContext.enabled }}
+        securityContext: {{- omit .Values.containerSecurityContext "enabled" | toYaml | nindent 10 }}
         {{- end }}
         volumeMounts:
+        {{- if .Values.extraConf.secretName }}
+        - name: custom-file
+          mountPath: /app/onlyoffice/config/{{ .Values.extraConf.fileName }}
+          subPath: {{ .Values.extraConf.fileName }}
+        {{- end }}
         - name: app-data
           mountPath: /app/onlyoffice/data
         - name: files-data
           mountPath: /var/www/products/ASC.Files/server/
         - name: people-data
           mountPath: /var/www/products/ASC.People/server/
-        {{ if .Values.onlyofficeCrm.enabled }}
+        {{- if .Values.onlyofficeCrm.enabled }}
         - name: crm-data
           mountPath: /var/www/products/ASC.CRM/server/
-        {{ end }}
-        {{ if .Values.onlyofficeProjectServer.enabled }}
+        {{- end }}
+        {{- if .Values.onlyofficeProjectServer.enabled }}
         - name: project-data
           mountPath: /var/www/products/ASC.Projects/server/
-        {{ end }}
-        {{ if .Values.onlyofficeCalendar.enabled }}
+        {{- end }}
+        {{- if .Values.onlyofficeCalendar.enabled }}
         - name: calendar-data
           mountPath: /var/www/products/ASC.Calendar/server/
-        {{ end }}
-        {{ if .Values.onlyofficeMail.enabled }}
+        {{- end }}
+        {{- if .Values.onlyofficeMail.enabled }}
         - name: mail-data
           mountPath: /var/www/products/ASC.Mail/server/
-        {{ end }}
+        {{- end }}
       volumes:
+      {{- if .Values.extraConf.secretName }}
+      - name: custom-file
+        secret:
+          secretName: {{ .Values.extraConf.secretName }}
+          items:
+          - key: {{ .Values.extraConf.fileName }}
+            path: {{ .Values.extraConf.fileName }}
+      {{- end }}
       - name: app-data
         persistentVolumeClaim:
           claimName: app-data
@@ -123,23 +136,23 @@ spec:
       - name: people-data
         persistentVolumeClaim:
           claimName: people-data
-      {{ if .Values.onlyofficeCrm.enabled }}
+      {{- if .Values.onlyofficeCrm.enabled }}
       - name: crm-data
         persistentVolumeClaim:
           claimName: crm-data
-      {{ end }}
-      {{ if .Values.onlyofficeProjectServer.enabled }}
+      {{- end }}
+      {{- if .Values.onlyofficeProjectServer.enabled }}
       - name: project-data
         persistentVolumeClaim:
           claimName: project-data
-      {{ end }}
-      {{ if .Values.onlyofficeCalendar.enabled }}
+      {{- end }}
+      {{- if .Values.onlyofficeCalendar.enabled }}
       - name: calendar-data
         persistentVolumeClaim:
           claimName: calendar-data
-      {{ end }}
-      {{ if .Values.onlyofficeMail.enabled }}
+      {{- end }}
+      {{- if .Values.onlyofficeMail.enabled }}
       - name: mail-data
         persistentVolumeClaim:
           claimName: mail-data
-      {{ end }}
+      {{- end }}
