--- a/values.yaml
+++ b/values.yaml
@@ -1,6 +1,7 @@
-# Default values for appserver.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+# Default values for appserver
+
+## Appserver common parameters
+## This block defines common parameters for all deployments and statefulsets
 
 connections:
   mysqlDatabaseMigration: "true"
@@ -10,8 +11,8 @@ connections:
   mysqlPassword: ""
   mysqlRootPassword: ""
   mysqlExistingSecret: "mysql"
-  musqlSecretKeyPassword: "mysql-password"
-  musqlSecretKeyRootPassword: "mysql-root-password"
+  mysqlSecretKeyPassword: "mysql-password"
+  mysqlSecretKeyRootPassword: "mysql-root-password"
   appDotnetEnv: "test"
   appCoreBaseDomain: "localhost"
   appCoreMachinekey: "your_core_machinekey"
@@ -35,7 +36,7 @@ connections:
   projektsServerHost: "onlyoffice-projects-server"
   urlshortenerHost: "onlyoffice-urlshortener"
   studioNotifyHost: "onlyoffice-studio-notify"
-  sockerHost: "onlyoffice-socket"
+  socketHost: "onlyoffice-socket"
   telegramServiceHost: "onlyoffice-telegram-service"
   peopleServerHost: "onlyoffice-people-server"
   filesHost: "onlyoffice-files"
@@ -62,8 +63,6 @@ images:
   apiSystem: onlyoffice/4testing-appserver-api-system
   api: onlyoffice/4testing-appserver-api
   backup: onlyoffice/4testing-appserver-backup
-  documentserver: onlyoffice/documentserver
-  documentserverTag: 7.0.1
   filesServices: onlyoffice/4testing-appserver-files-services
   notify: onlyoffice/4testing-appserver-notify
   socket: onlyoffice/4testing-appserver-socket
@@ -77,29 +76,22 @@ images:
   urlshortener: onlyoffice/4testing-appserver-urlshortener
 
 persistence:
+  storageClass: "nfs"
   appData:
-    storageClass: "nfs"
     size: 1Gi
   calendarData:
-    storageClass: "nfs"
     size: 1Gi
   crmData:
-    storageClass: "nfs"
     size: 1Gi
   filesData:
-    storageClass: "nfs"
     size: 1Gi
   mailData:
-    storageClass: "nfs"
     size: 1Gi
   peopleData:
-    storageClass: "nfs"
     size: 1Gi
   projectData:
-    storageClass: "nfs"
     size: 1Gi
   proxyLog:
-    storageClass: "nfs"
     size: 1Gi
 
 containerPorts:
@@ -109,12 +101,6 @@ containerPorts:
     url: 8081
     internal: 8099
     external: 8092
-  docs:
-    http: 80
-    https: 443
-    spch: 8080
-    docs: 8000
-    prox: 8888
   socket: 9899
   sso: 9834
   thumbnails: 9800
@@ -123,19 +109,11 @@ containerPorts:
 podAnnotations:
   rollme: "{{ randAlphaNum 5 | quote }}"
 
-podAntiAffinity:
-  type: "soft"
-  topologyKey: kubernetes.io/hostname
-  weight: "100"
-
-nodeSelector: {}
-
-tolerations: []
-
 jwt:
   enabled: true
   secret: "jwt_secret"
   header: "AuthorizationJwt"
+  inBody: true
 
 livenessProbe:
   enabled: false
@@ -164,7 +142,34 @@ readinessProbe:
     port: 5050
   periodSeconds: 10
   successThreshold: 1
-  timeoutSeconds: 3 
+  timeoutSeconds: 3
+
+podSecurityContext:
+  enabled: false
+  runAsUser: 104
+  runAsGroup: 107
+
+containerSecurityContext:
+  enabled: false
+  allowPrivilegeEscalation: false
+
+imagePullSecrets: ""
+
+extraConf:
+  secretName: ""
+  fileName: appsettings.json
+
+## Appserver common deployment parameters
+## This block defines common parameters for all deployments only
+
+podAntiAffinity:
+  type: "soft"
+  topologyKey: kubernetes.io/hostname
+  weight: "100"
+
+nodeSelector: {}
+
+tolerations: []
 
 deploymetsUpdateStrategy:
   type: RollingUpdate
@@ -172,41 +177,113 @@ deploymetsUpdateStrategy:
     maxUnavailable: 25%
     maxSurge: 25%
 
-statefulsetUpdateStrategy:
-  type: RollingUpdate
-
-podSecurityContext:
-  enabled: false
-  runAsUser: 104
-  runAsGroup: 107
-
-ingress:
-  enabled: true
-  host:
+## Appserver People Server deployment parameters
 
 onlyofficePeopleServer:
   replicaCount: 2
 
+## Appserver Files deployment parameters
+
 onlyofficeFiles:
   replicaCount: 2
 
+## Appserver Proxy deployment parameters
+
 onlyofficeProxy:
   replicaCount: 2
+  extraConf:
+    configMap: ""
+    fileName: "10.upstream.conf.upstream"
+
+## Appserver Calendar deployment parameters
 
 onlyofficeCalendar:
-  replicaCount: 2
   enabled: true
-  
-onlyofficeCrm:
   replicaCount: 2
-  enabled: true
-  
-onlyofficeMail:
-  replicaCount: 2
-  enabled: true
-  
-onlyofficeProjectServer:
-  replicaCount: 2
-  enabled: true
 
-imagePullSecrets: myregistrykey
+## Appserver Crm deployment parameters
+
+onlyofficeCrm:
+  enabled: true
+  replicaCount: 2
+
+## Appserver Mail deployment parameters
+
+onlyofficeMail:
+  enabled: true
+  replicaCount: 2
+
+## Appserver Project Server deployment parameters
+
+onlyofficeProjectServer:
+  enabled: true
+  replicaCount: 2
+
+## Appserver common statefulset parameters
+## This block defines common parameters for all statefulsets only
+
+statefulsetUpdateStrategy:
+  type: RollingUpdate
+
+## Appserver ingress parameters
+## This block defines parameters for the Nginx ingress only
+
+ingress:
+  enabled: true
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/proxy-body-size: 100m
+  tls:
+    enabled: false
+    secretName: tls
+  host: ""
+
+## Document server parameters
+## This block defines parameters for the document server StatefulSet only
+
+docs:
+  image:
+    repository: onlyoffice/documentserver
+    tag: 7.1.1
+    pullPolicy: IfNotPresent
+
+  podSecurityContext:
+    enabled: false
+    runAsUser: 104
+    runAsGroup: 107
+
+  containerPorts:
+    http: 80
+    https: 443
+    spch: 8080
+    docs: 8000
+    proxy: 8888
+
+  startupProbe:
+    enabled: false
+    httpGet:
+      path: /index.html
+      port: 8888
+    failureThreshold: 30
+    periodSeconds: 10
+
+  readinessProbe:
+    enabled: false
+    failureThreshold: 2
+    httpGet:
+      path: /index.html
+      port: 8888
+    periodSeconds: 10
+    successThreshold: 1
+    timeoutSeconds: 3
+
+  livenessProbe:
+    enabled: false
+    failureThreshold: 5
+    httpGet:
+      path: /index.html
+      port: 8888
+    periodSeconds: 10
+    successThreshold: 1
+    timeoutSeconds: 3
+    initialDelaySeconds: 45
