--- a/templates/configmaps/appserver.yaml
+++ b/templates/configmaps/appserver.yaml
@@ -2,6 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: appserver-all
+  annotations:
+    "helm.sh/hook": pre-install
+    "helm.sh/hook-weight": "1"
+
 data:
   DATABASE_MIGRATION: {{ .Values.connections.mysqlDatabaseMigration | quote }}
   MYSQL_HOST: {{ .Values.connections.mysqlHost }}
@@ -13,6 +17,9 @@ data:
   DOCUMENT_SERVER_URL_PUBLIC: {{ .Values.connections.DocumentServerUrlPublic | quote }}
   DOCUMENT_SERVER_URL_INTERNAL: {{ .Values.connections.DocumentServerUrlInternal | quote }}
   DOCUMENT_SERVER_URL_CONVERTER: {{ .Values.connections.DocumentServerUrlConverter | quote }}
+  APP_URL_PORTAL: {{ .Values.connections.AppUrlPortal | quote }}
   KAFKA_HOST: {{ .Values.connections.kafkaHost }}
   ELK_HOST: {{ .Values.connections.elkHost }}
   PROXY_HOST: {{ .Values.connections.proxyHost }}
+  REDIS_HOST: {{ .Values.connections.redisHost }}
+  RABBIT_HOST: {{ .Values.connections.rabbitHost }}
