--- a/templates/services/onlyoffice-migration.yaml
+++ b/templates/services/onlyoffice-migration.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: onlyoffice-storage-migration
+  name: onlyoffice-migration
   labels:
-    app: onlyoffice-storage-migration
+    app: onlyoffice-migration
 spec:
   ports:
   - port: {{ .Values.containerPorts.appserver.http }}
     name: http
     targetPort: {{ .Values.containerPorts.appserver.http }}
   selector:
-    statefulset.kubernetes.io/pod-name: onlyoffice-storage-migration-0
+    statefulset.kubernetes.io/pod-name: onlyoffice-migration-0
   type: ClusterIP
